# chessmate

./: .gitignore  99-chessmate-pico.rules  CMakeLists.txt  Jenkinsfile  README.md  requirements.txt
ChessBoard/: test_chessboard.sh  test_chessboard_controller.py
Robot/: test_robot.sh  test_robot_controller.py
action/: ExecuteChessMove.action
assets/sounds/comments/: comments.txt
assets/sounds/facts/: genfacts.py
assets/sounds/moves/: genmoves.py
assets/sounds/pieces/: bishop.txt  queen.txt
chessmate/: __init__.py
chessmate/engine/: chess_engine_server.py  chess_game_manager.py  game_management.py  message_converters.py  stockfish_interface.py  topic_chess_engine_server.py
chessmate/hardware/: __init__.py  arduino_clients.py  arduino_communication.py  arduino_communication_node.py  config_loader.py  engine_client.py  gpio_abstraction.py  lcd_display_node.py  topic_arduino_clients.py  topic_arduino_communication.py  topic_engine_client.py  unified_hardware_test.py
chessmate_dev_ws/: README.md  launch_production_game.sh  setup_ros2_fixed.bash  test_step6_complete.sh
chessmate_dev_ws/scripts/: README.md  build_x86.sh  launch_production_game.sh  run_integration_tests.sh  run_system_test.sh  run_unit_tests.sh  setup_permissions.sh
chessmate_dev_ws/src/chessmate/: CMakeLists.txt  README.md  package.xml
chessmate_dev_ws/src/chessmate/chessmate/engine/: __init__.py  chess_engine_server.py  simple_chess_engine.py  topic_game_management.py
chessmate_dev_ws/src/chessmate/chessmate/hardware/: config_loader.py  game_management_node.py  gpio_abstraction.py  robot_animation_controller.py  rotary_encoder_node.py  unified_arduino_bridge.py
chessmate_dev_ws/src/chessmate/chessmate/kinematics/: __init__.py  chess_coordinate_mapper.py  scara_kinematics.py
chessmate_dev_ws/src/chessmate/chessmate/nodes/: __init__.py
chessmate_dev_ws/src/chessmate/description/meshes/collision/: base_link_collision.stl  link1_collision.stl  link2_collision.stl
chessmate_dev_ws/src/chessmate/description/meshes/visual/: base_link_visual.stl
chessmate_dev_ws/src/chessmate/description/rviz/: chessmate_complete.rviz
chessmate_dev_ws/src/chessmate/launch/: chessmate_complete.launch.py  display.launch.py  host_visualization.launch.py  topic_engine_testing.launch.py  unified_hardware.launch.py
chessmate_dev_ws/src/chessmate/msg/: BoardState.msg  ChessPiece.msg  GripperCommand.msg  JointCommand.msg  LCDCommand.msg  SensorReading.msg
chessmate_dev_ws/src/chessmate/scripts/: chess_animation_demo.py
chessmate_dev_ws/src/chessmate/srv/: CalculateMove.srv  CalibrateArm.srv  ChessSquareKinematics.srv  EvaluatePosition.srv  ExecuteMove.srv  ValidateMove.srv
chessmate_dev_ws/src/chessmate/test/: test_controller_communication.py  test_end_to_end_game.py  test_integration_comprehensive.py  test_scara_kinematics.py
chessmate_dev_ws/src/chessmate/test/hardware/: test_lcd.py  test_rotary_encoder.py  test_rotary_encoder_gpio.py
chessmate_dev_ws/src/chessmate/test/integration/: test_ros2_hardware.py
chessmate_dev_ws/src/chessmate/test/system/: test_full_game.py
chessmate_dev_ws/src/chessmate_hardware/: setup.py
chessmate_dev_ws/src/chessmate_hardware/chessmate_hardware/: arduino_communication_node.py  topic_arduino_communication.py  unified_arduino_bridge.py
chessmate_dev_ws/src/chessmate_hardware/config/: unified_hardware_config.yaml
chessmate_dev_ws/src/chessmate_hardware/launch/: pi_headless_testing.launch.py
config/: scara_config.yaml
controllers/chessboard/: Button.h  Button.ino  ChessBoard.ino  Display.h  Display.ino  Mock.h  Mock.ino  README.md  Sensor.h  Sensor.ino  Serial.h  Serial.ino  Utils.h  test_chessboard.sh  test_chessboard_controller.py
controllers/robot/: Arm.h  Arm.ino  Head.h  Head.ino  README.md  Robot.ino  test_robot.sh
description/meshes/: README.md
description/meshes/collision/: end_effector_collision.stl
description/meshes/visual/: end_effector_visual.stl  link1_visual.stl  link2_visual.stl
description/rviz/: scara_view.rviz
description/urdf/: chess_board.urdf.xacro  chessmate_complete.urdf.xacro  scara_robot.urdf.xacro
launch/: chess_animation_demo.launch.py  distributed_testing.launch.py  engine_testing.launch.py  integration_testing.launch.py  pi_headless_testing.launch.py
msg/: ArduinoCommand.msg  ChessMove.msg  GameState.msg  RobotAnimation.msg  RobotStatus.msg  RotaryEncoderEvent.msg
scripts/: build.sh  build_arm.sh  cleanup_chessmate_processes.sh  kinematics_server.py  launch_production_game.sh  run_integration_tests.sh  run_system_test.sh  run_unit_tests.sh  setup_permissions.sh  test_host.sh  test_pi_host.sh  test_x86_host.sh
sounds/comments/: gencomments.py
sounds/facts/: facts.txt
sounds/moves/: genmoves.py
sounds/pieces/: genpieces.py  king.txt  knight.txt  pawn.txt  rook.txt
sounds/squares/: gensquares.py
srv/: ForwardKinematics.srv  GetBestMove.srv  InverseKinematics.srv  SetBoardMode.srv  UpdateGameState.srv
test/: conftest.py
test/integration/: test_arduino_serial.py
test/system/: test_full_game.py
test/unit/: test_chess_logic.py  test_coordinate_mapping.py  test_scara_kinematics.py
